2005-09-11  Mark Wielaard  <mark@klomp.org>

	* lib/gen-classlist.sh.in: Use sort -r to work around bug #21418.

2005-09-11  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/channels/FileChannelImpl.java (finalize): Check whether
	fd != -1 before calling close().

2005-09-10  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalBorders.java
	(PaletteBorder): new class.
	
2005-09-10  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalIconFactory.java
	(PaletteCloseIcon): new class.

2005-09-10  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalInternalFrameUI.java:
	(instances): removed,
	(createUI): just return new instance,
	API docs all over.
	
2005-09-10  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (fail_g2d): New method.
	(GdkGraphics2D(GdkGraphics2D)): Call fail_g2d if Graphics2D not
	specified.
	(GdkGraphics2D(int,int)): Likewise.
	(GdkGraphics2D(GtkComponentPeer)): Likewise.

2005-09-10  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/EmbeddedWindow.java (addNotify): Throw
	AssertionError if field access fails.

2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (static): Reindent
	second error message.

2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	PR awt/23692
	* gnu/java/awt/peer/gtk/GdkGraphics2D.java (static): Only call
	initStaticState if using Graphics2D.  Otherwise print error and
	exit.
	(setClip(Shape)): If clip == null and component == null, do
	nothing.

2005-09-09  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/java/awt/peer/gtk/GdkGraphics.java
	(GdkGraphics(GtkComponentPeer)): Set font field to a sensible
	default if component font is null.

2005-09-09  Keith Seitz  <keiths@redhat.com>

	* vm/reference/gnu/classpath/jdwp/VMIdManager.java (newObjectId): 
	Set the reference for the ID.

2005-09-09  Keith Seitz  <keiths@redhat.com>
