@@ -1,5 +1,10 @@
 2005-09-11  Mark Wielaard  <mark@klomp.org>
 
+	* m4/acinclude.m4 (CLASSPATH_CHECK_GCJ): Check for gcj 4 with
+	#if __GNUC__ <= 3.
+
+2005-09-11  Mark Wielaard  <mark@klomp.org>
+
 	* lib/gen-classlist.sh.in: Use sort -r to work around bug #21418.
 
 2005-09-11  Mark Wielaard  <mark@klomp.org>
